<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <TextView android:id="@+id/shareTitle" 
              android:text="@string/share_title" 
              android:layout_centerHorizontal="true"
              android:layout_alignParentTop="true"
	          android:layout_marginTop="20dip"
              android:layout_width="wrap_content" 
              android:layout_height="wrap_content">
    </TextView>
    
    <Button
        android:id="@+id/shareMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_mail"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dip" 
        android:layout_marginRight="10dip"/>
    
    <Button
        android:id="@+id/shareMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_message"
        android:layout_below="@id/shareMail"
        android:layout_marginLeft="10dip" 
        android:layout_marginRight="10dip"/>
    
       
    <Button
        android:id="@+id/shareTwitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_twitter"
        android:layout_above="@id/shareMail"
        android:layout_marginLeft="10dip" 
        android:layout_marginRight="10dip"/>
    
    <Button
        android:id="@+id/shareFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_facebook"
        android:layout_above="@id/shareTwitter"
        android:layout_marginLeft="10dip" 
        android:layout_marginRight="10dip"/>
        
    <com.google.ads.AdView 
                android:id="@+id/shareAdView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                ads:adUnitId="@string/admob_publisher_id"
                ads:adSize="BANNER"/> 
       
 </RelativeLayout>