<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    >
    <Button
        android:id="@+id/getData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_data"/>
     <Button
        android:id="@+id/showData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_data"/>
        
     <Button
        android:id="@+id/deleteGigsData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_gigs_data"/>
    <!-- 
     <Button
        android:id="@+id/createPrefData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_pref_data"/>
     
     <Button
        android:id="@+id/deletePrefData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_pref_data"/>
       -->
       
</LinearLayout>
