<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <Spinner 
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/city_prompt" 
        android:layout_alignParentRight="true" 
        android:layout_marginTop="10dip"/>
    
    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/cityPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_prompt"
        android:layout_alignBottom="@id/spinner" 
        android:layout_alignTop="@id/spinner" 
        android:gravity="center_vertical" 
        android:layout_toLeftOf="@id/spinner" 
        android:layout_alignParentLeft="true"/>
    
    <View android:id="@+id/settingsSeparator"
        android:layout_width="fill_parent" 
        android:layout_height="1dp" 
        android:background="?android:attr/listDivider"
        android:layout_below="@id/spinner" 
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"/>
        
    <CheckBox 
        android:layout_alignParentRight="true" 
        android:id="@+id/checkNotification" 
        android:layout_height="wrap_content" 
        android:text="" 
        android:layout_width="wrap_content"
        android:layout_below="@id/settingsSeparator"/>
        
    <TextView android:text="@string/text_notification" 
              android:textAppearance="?android:attr/textAppearanceMedium" 
              android:layout_height="wrap_content" 
              android:id="@+id/textNotification" 
              android:layout_width="wrap_content" 
              android:layout_alignParentLeft="true"
              android:layout_below="@id/settingsSeparator"
              android:layout_toLeftOf="@id/checkNotification" 
              android:layout_alignBottom="@id/checkNotification" 
              android:gravity="center_vertical"/>
    <Button
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" 
        android:text="@string/feedback_button"/>
    
</RelativeLayout>